<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center_horizontal"
    android:padding="24dp"
    android:layout_marginTop="128dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_in"
        android:textSize="34sp"
        android:textColor="#4285F4"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/username_hint"
        android:imeOptions="flagNoPersonalizedLearning"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword|textNoSuggestions"
        android:importantForAutofill="no"
        android:autofillHints=""
        android:imeOptions="flagNoPersonalizedLearning"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/btn_create_account"
            android:textAllCaps="false"
            android:paddingHorizontal="8dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:paddingHorizontal="8dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</LinearLayout>
